--- a/mapreduce/build.gradle
+++ b/mapreduce/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'application'
 }
 
 group 'org.example'
@@ -7,6 +8,18 @@ version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
+}
+
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'StartJobMain'
+        )
+    }
+}
+
+application {
+    mainClassName = "StartJobMain"
 }
 
 dependencies {
