--- a/mapreduce/build.gradle
+++ b/mapreduce/build.gradle
@@ -24,5 +24,9 @@ application {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+
+    // Dependency on local binaries
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+
     implementation 'org.apache.hadoop:hadoop-core:1.2.1'
 }
